...
            <!-- Welcome Back Text -->
            <TextView
                android:id="@+id/tvWelcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/welcome_back"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Email Text Field -->
            <com.google.android.material.textfield.TextInputLayout
...
                app:boxStrokeColor="@drawable/text_input_outline_color"
                app:hintTextColor="@drawable/text_input_hint_color"
                app:cursorColor="@color/white"
                app:errorTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
...
                app:boxStrokeColor="@drawable/text_input_outline_color"
                app:hintTextColor="@drawable/text_input_hint_color"
                app:errorTextColor="@color/white"
                app:cursorColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>
...
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- Error Message Text -->
            <TextView
                android:id="@+id/errorTextSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/errorColor"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:gravity="start"
                android:paddingHorizontal="5dp"
                android:visibility="gone"/>

            <!-- Sign In Button -->
            <Button
                android:id="@+id/signInButtonAuthToHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/action_sign_in"
                android:textAllCaps="false" />
        </LinearLayout>
...
