<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthHome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_initialScreenPrimary"
        android:padding="30dp">

        <!-- Header Section -->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:paddingTop="50dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/heroImage"
            app:layout_constraintVertical_weight="2">

            <TextView
                android:id="@+id/AppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/dark_textPrimary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AppSlogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_slogan"
                android:textColor="@color/dark_textSecondary"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Hero Image (centered between header & footer) -->
        <ImageView
            android:id="@+id/heroImage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:maxHeight="300dp"
            android:padding="20dp"
            android:contentDescription="@string/imageDescription_hero"
            android:src="@drawable/hero"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintBottom_toTopOf="@+id/footer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="1"
            />

        <!-- Footer Section -->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/heroImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="2">

            <TextView
                android:id="@+id/tvLetsGetStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/let_s_get_started"
                android:textColor="@color/dark_textSecondary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonInitialToSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_sign_in"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginBottom="8dp"
                android:paddingVertical="12dp"
                android:paddingHorizontal="24dp" />

            <Button
                android:id="@+id/buttonInitialToSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_sign_up"
                android:text="@string/sign_up"
                android:textColor="@color/btn_purpleOutline"
                android:textAllCaps="false"
                android:paddingVertical="12dp"
                android:paddingHorizontal="24dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>